# sutils

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  user_config.h.in
docs/: base.md  concurrency.md  containers.md  files.md  json.md  log.md  logger.md  misc.md  miscs.md  parsers.md  simple_misc.md  streams.md  strings.md  tests.md  xml_parser.md
docs/json_results/: combine.css  conformance.html  performance_Corei7-4850HQ@2.30GHz_mac64_clang10.0.html
include/: cfauto.h  su_attachable.h  su_endian.h  su_is_regular.h  su_job.h  su_jobdispatcher.h  su_json.h  su_logger.h  su_logger_file.h  su_membuf.h  su_saxparser.h  su_signal.h  su_spinlock.h  su_stackarray.h  su_statesaver.h  su_string_format.h  su_teebuf.h
include/su/base/: cfauto.h  config.h.in
include/su/concurrency/: jobdispatcher.h
include/su/containers/: array_view.h  flat_map.h  flat_set.h
include/su/log/: logger.h
include/su/miscs/: attachable.h  is_regular.h
include/su/strings/: str_load.h
include/su_shim/: string_view.h
source/: ConvertUTF.cpp  ConvertUTF.h  cfauto.h  su_abstractparser.cpp  su_abstractparser.h  su_always_inline.h  su_attachable.cpp  su_attachable.h  su_endian.h  su_filepath.cpp  su_filepath.h  su_flat_map.h  su_flat_set.h  su_is_regular.h  su_job.cpp  su_job.h  su_jobdispatcher.cpp  su_jobdispatcher.h  su_json.cpp  su_json.h  su_json_flat.cpp  su_json_flat.h  su_logger.cpp  su_logger.h  su_logger_file.cpp  su_logger_file.h  su_map.h  su_membuf.cpp  su_membuf.h  su_mempool.h  su_null_stream.h  su_platform.h  su_resource_access.cpp  su_resource_access.h  su_saxparser.cpp  su_saxparser.h  su_signal.h  su_small_vector.h  su_spinlock.h  su_stackarray.h  (+16 more)
source/concurrency/: jobdispatcher.cpp
source/files/: filepath.cpp
source/log/: logger.cpp  logger_file.cpp
source/miscs/: attachable.cpp
source/shim/: optional.h  string_view.h
source/su/concurrency/: spinlock.h
source/su/files/: filepath.cpp  resource_access.h
source/su/json/: bson.h  smile.h  ubjson.h
source/su/log/: logger.cpp  logger_file.h
source/su/miscs/: signal.h
source/su/parsers/: saxparser.cpp
source/su/strings/: str_ext.h  str_load.cpp
source/su/tests/: simple_tests_runner.cpp
source/su_shim/: memory.h  optional.h  string_view.h
source/tests/: simple_tests.h  simple_tests_runner.cpp
src/: cfauto.h  su_abstractparser.cpp  su_abstractparser.h  su_always_inline.h  su_attachable.cpp  su_attachable.h  su_endian.h  su_filepath.cpp  su_filepath.h  su_flat_map.h  su_flat_set.h  su_format.cpp  su_format.h  su_hash_combine.h  su_is_regular.h  su_job.cpp  su_job.h  su_jobdispatcher.cpp  su_jobdispatcher.h  su_json.cpp  su_json.h  su_logger.cpp  su_logger.h  su_logger_file.cpp  su_logger_file.h  su_membuf.cpp  su_membuf.h  su_null_stream.h  su_platform.h  su_resource_access.cpp  su_resource_access.h  su_saxparser.cpp  su_saxparser.h  su_signal.h  su_spinlock.h  su_stackarray.h  su_statesaver.h  su_string_utils.cpp  su_string_utils.h  su_teebuf.h  (+4 more)
src/su/base/: always_inline.h  cfauto.h  endian.h  platform.h
src/su/concurrency/: job.cpp  job.h  jobdispatcher.cpp  jobdispatcher.h  spinlock.h  thread.cpp  thread.h
src/su/concurrency/tests/: jobdispatcher_tests.cpp
src/su/containers/: array_view.h  flat_map.h  flat_set.h  hash_combine.h  map_ext.h  small_vector.h  stackarray.h
src/su/containers/tests/: flat_map_tests.cpp  flat_set_tests.cpp
src/su/files/: filepath.cpp  filepath.h  resource_access.cpp
src/su/files/tests/: resource_access_tests.cpp
src/su/json/: bjson.h  flat.h  json.cpp  json.h  json_flat.cpp  json_flat.h  messagepack.h
src/su/json/tests/: json_tests.cpp
src/su/log/: logger.cpp  logger.h  logger_file.cpp  logger_file.h
src/su/log/tests/: logger_tests.cpp
src/su/miscs/: attachable.cpp  attachable.h  is_regular.h  mempool.h  signal.h  statesaver.h  uuid.cpp  uuid.h  version.cpp  version.h
src/su/miscs/tests/: mempool_tests.cpp  signal_tests.cpp  statesaver_tests.cpp  uuid_tests.cpp  version_tests.cpp
src/su/parsers/: abstractparser.cpp  abstractparser.h  saxparser.cpp  saxparser.h
src/su/streams/: membuf.cpp  membuf.h  null_stream.h  teebuf.h
src/su/strings/: str_ext.cpp  str_ext.h  str_format.cpp  str_format.h  str_load.cpp  str_load.h
src/su/strings/tests/: str_format_tests.cpp  string_tests.cpp
src/su/tests/: simple_tests.h  simple_tests_runner.cpp
src/su_tests/: simple_tests.h  simple_tests_runner.cpp
src/tests/: simple_tests.h  simple_tests_runner.cpp
tests/: CMakeLists.txt  attachable_tests.cpp  binary_json_tests.cpp  endian_tests.cpp  filepath_tests.cpp  flat_map_tests.cpp  flat_set_tests.cpp  is_regular_tests.cpp  jobdispatcher_tests.cpp  json_tests.cpp  logger_tests.cpp  membuf_tests.cpp  mempool_tests.cpp  resource_access_tests.cpp  signal_tests.cpp  simple_test_runner.cpp  simple_tester.h  statesaver_tests.cpp  string_format_tests.cpp  string_load_tests.cpp  string_tests.cpp  teebuf_tests.cpp  thread_debug_tests.cpp  usersettings_tests.cpp  uuid_tests.cpp  version_tests.cpp  xml_tests.cpp
tests/base/: endian_tests.cpp
tests/concurrency/: jobdispatcher_tests.cpp  thread_debug_tests.cpp
tests/data/: canada.json  citm_catalog.json  twitter.json
tests/files/: filepath_tests.cpp  resource_access_tests.cpp
tests/json/: json_tests.cpp
tests/log/: logger_tests.cpp
tests/miscs/: attachable_tests.cpp  is_regular_tests.cpp  mempool_tests.cpp  signal_tests.cpp  statesaver_tests.cpp  uuid_tests.cpp  version_tests.cpp
tests/parsers/: xml_tests.cpp
tests/rsrc/en.lproj/: test.strings
tests/streams/: membuf_tests.cpp  teebuf_tests.cpp
tests/strings/: str_format_tests.cpp  str_tests.cpp
